--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="assets/css/app.css" rel="stylesheet" />
+    <link href="css/app.css" rel="stylesheet" />
     <title>Jadon Gonzaga | Portfolio</title>
 </head>
 
@@ -32,7 +32,7 @@
             <div class="container header-container">
                 <h1 class="name">Jadon Gonzaga</h1>
                 <h3 class="subtitle text-center">Recently certified in Data Science and Analytics through UCSD Extenstion.</h3>
-                <img src="assets/images/me.jpeg" class="profile" /><br><br><br>
+                <img src="images/me.jpeg" class="profile" /><br><br><br>
             </div>
         </div>
         <div class="wave-svg">
@@ -292,7 +292,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
         integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
         crossorigin="anonymous"></script>
-    <script src="assets/js/app.js"></script>
 </body>
 
 </html>
