--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="./css/app.css" rel="stylesheet" />
     <title>Jadon Gonzaga | Portfolio</title>
 </head>
 
@@ -32,7 +32,7 @@
             <div class="container header-container">
                 <h1 class="name">Jadon Gonzaga</h1>
                 <h3 class="subtitle text-center">Recently certified in Data Science and Analytics through UCSD Extenstion.</h3>
-                <img src="images/me.jpeg" class="profile" /><br><br><br>
+                <img src="./images/me.jpeg" class="profile" /><br><br><br>
             </div>
         </div>
         <div class="wave-svg">
